image display preview

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <p>Drag files here to add</p>
     <input type="file" id="file-input" multiple style="display:none;" />
 </div>
+<div id="image-previews" style="margin-top: 20px;"></div> <!-- Section des prévisualisations -->
 
 <!-- Conteneur pour afficher les fichiers ajoutés avec boutons pour les réorganiser -->
 <div id="file-list-container" style="margin-top: 20px;">
